fix: alignment issues

--- a/css/main.scss
+++ b/css/main.scss
@@ -86,7 +86,7 @@ section.hero {
     .down-arrow {
         stroke: white;
         position: absolute;
-        bottom: 1em;
+        bottom: 6em;
         width: 1em;
         animation: moveArrow 1s alternate-reverse infinite;
         path {
@@ -152,7 +152,7 @@ section.hero {
         left: unset;
         right: 0;
         width: 55%;
-        height: 90vh;
+        height: 100vh;
     }
     .logo {
         color: black;
@@ -168,9 +168,7 @@ section.hero {
         margin-top: -5em;
         svg.down-arrow {
             stroke: black;
-            position: unset;
-            margin-bottom: 0;
-            margin-top: 3em;
+            bottom: 2em;
             path {
                 fill: black;
             }
@@ -179,14 +177,19 @@ section.hero {
     .feature {
         display: grid;
         grid-template-columns: repeat(2, auto);
+        justify-content: center;
         gap: 3em;
         margin-bottom: 8em;
         img {
             width: 25em;
         }
         .content {
+            display: flex;
             text-align: right;
             width: 25em;
+            flex-direction: column;
+           justify-content: center;
+
         }
     }
     .feature.reversed {
@@ -204,11 +207,11 @@ section.hero {
 
 @media only screen and (min-width:1200px) {
     .wrapper {
-        width: 1200px;
         margin: 0 auto;
     }
     .feature {
         gap: 0;
+        justify-content: space-around;
     }
 }
 
